--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
-    "styled-components": "^4.0.3"
+    "styled-components": "^4.0.3",
+    "tone": "^0.12.80"
   },
   "scripts": {
     "start": "react-scripts start",
