--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "metronome",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alanpaulprice.github.io/metronome",
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
