--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "tone": "^0.12.80"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -26,6 +28,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.6.2"
   }
 }
